--- a/index.html
+++ b/index.html
@@ -64,7 +64,7 @@
           .attr("height", this.c * this.scale);
           
           this.rect4 = sampleSVG.append("rect")
-          .style("fill", "paleturqoise")
+          .style("fill", "paleturquoise")
           .attr("x", this.x_start + parseInt(this.rect1.attr("width")))
           .attr("y", this.y_start + parseInt(this.rect1.attr("height")))
           .attr("width", this.b * this.scale)
